mobile render delay fixes

--- a/css/style.css
+++ b/css/style.css
@@ -819,6 +819,30 @@
     }
   }
 
+  @keyframes colorPulse {
+    0% {
+      fill: #a3b3d3;
+    }
+    10% {
+      fill: #43b7ffc3;
+    }
+    20% {
+      fill: #2fa6f0;
+    }
+    50% {
+      fill: #447df0;
+    }
+    70% {
+      fill: #2fa6f0;
+    }
+    90% {
+      fill: #43b7ffc3;
+    }
+    100% {
+      fill: #a3b3d3;
+    }
+  }
+
   @keyframes rotate {
     0% {
       transform: rotate(0deg) translate3d(0, 0, 0);
