--- a/css/critical.css
+++ b/css/critical.css
@@ -315,18 +315,20 @@
   }
 
   .company-logo {
-    max-width: clamp(120px, 11vw, 175px);
+    width: 25%;
+    max-width: 200px;
+    height: auto;
   }
 
   .toggle-hamburger-btn-box {
     display: flex;
     align-items: center;
-    gap: 2rem;
+    gap: 1.2rem;
     order: 1;
+  }
 
-    svg:first-of-type {
-      display: none;
-    }
+  .svg-color-preferance {
+    cursor: pointer;
   }
 
   .hamburger-btn {
@@ -465,7 +467,7 @@
     @media (width > 1000px) {
       & {
         position: relative;
-        margin-right: 8rem;
+        margin-right: 7rem;
         padding: 0;
         z-index: 0;
         box-shadow: none;
