--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -10,7 +10,19 @@
 html.dark-mode body,
 html.dark-mode .pg1-s3-performance {
   background-color: var(--clr-dark-theme-400);
-  transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s;
+}
+
+p,
+li,
+h1,
+h2,
+h3,
+a,
+span,
+.cmp-sub-heading,
+.cmp-topper-heading {
+  transition: color .5s transform 0.5s;
 }
 
 html.dark-mode p,
@@ -22,32 +34,33 @@ html.dark-mode a,
 html.dark-mode span,
 html.dark-mode .cmp-sub-heading,
 html.dark-mode .cmp-topper-heading {
-  color: var(--bodyTextWhite);
+  color: var(--bodyTextWhite); 
+  transition: color .5s transform 0.5s;
 }
 
 html.dark-mode .cmp-topper-heading {
   color: var(--clr-dark-theme-50);
 }
 
-html.dark-mode .header__container,
-html.dark-mode .nav-bar {
-  background-color: var(--clr-dark-theme-400);
-  transition: background-color 0.5s;
-}
-
-
 html.dark-mode #pg1-hero,
 html.dark-mode .pg1-s2-approach,
 html.dark-mode .pg1-s4-portfolio,
 html.dark-mode .pg1-s5-pricing,
 html.dark-mode #footer,
-html.dark-mode .cmp-svg-pages-decoration {
+html.dark-mode .cmp-svg-pages-decoration { 
   background-color: var(--clr-dark-theme-300);
   transition: background-color 0.5s;
 }
 
+html.dark-mode .header__container,
+html.dark-mode .nav-bar,
+html.dark-mode .pg1-s5-pricing--pg4-s1 {
+  background-color: var(--clr-dark-theme-400);
+  transition: transform 3s ease-in background-color 0.5s;
+}
+
 html.dark-mode .pg1-s2-approach {
-  padding-top: var(--padd-60-100)
+  padding-top: var(--padd-60-100);
 }
 
 html.dark-mode .header__container {
@@ -57,18 +70,18 @@ html.dark-mode .header__container {
 html.dark-mode .hero__svg-page-decoration,
 html.dark-mode .footer__svg-page-decoration {
   fill: var(--clr-dark-theme-400);
-  transition: fill 0.5s ease-out;
+  transition: fill 0.5s;
 }
 
 html.dark-mode .cmp-svg-pages-decoration__svg {
   fill: var(--clr-dark-theme-300);
-  transition: fill 0.5s ease-out;
+  transition: fill 0.5s;
 }
 
-html.dark-mode .cmp-main-btn,
-html.dark-mode .hamburger-btn {
+html.dark-mode .hamburger-btn,
+html.dark-mode .cmp-main-btn {
   background-color: var(--clr-dark-theme-200);
-  transition: background-color 0.5s;
+  transition: transform 3s ease-in background-color 0.5s;
 }
 
 html.dark-mode .cmp-main-btn--light,
@@ -79,7 +92,11 @@ html.dark-mode .cmp-main-btn-footer {
 
 html.dark-mode .decorative-side-svg {
   fill: var(--clr-dark-theme-200);
-  opacity: .55;
+  opacity: 0.55;
+}
+
+html.dark-mode .main-btn--pg1-hero:last-of-type {
+  background-color: var(--clr-dark-theme-300);
 }
 
 html.dark-mode .services-card {
@@ -87,7 +104,7 @@ html.dark-mode .services-card {
 
   .services-card__svg-box {
     background-color: transparent;
-    transition: transform .75s ease-out;
+    transition: transform 0.75s ease-out;
   }
 
   &:hover {
@@ -95,8 +112,8 @@ html.dark-mode .services-card {
     box-shadow: 0 0 30px var(--clr-dark-theme-100);
 
     .services-card__svg-box {
-      transform: scale(1.8) rotate(360deg); 
-      transition: transform .75s;
+      transform: scale(1.8) rotate(360deg);
+      transition: transform 0.75s;
 
       @media (prefers-reduced-motion: reduce) {
         transform: none !important;
@@ -109,13 +126,20 @@ html.dark-mode .services-card {
   }
 }
 
+html.dark-mode .services-page-list strong {
+    color: var(--clr-blue-100);
+    transition: color 0.5s; 
+} 
+
 html.dark-mode .banner-overlay {
   background-color: var(--clr-dark-theme-300);
+  transition: background-color 0.5s, opacity 0.5s ease;
 }
 
 html.dark-mode .pricing-card {
   background-color: var(--clr-dark-theme-400);
-  box-shadow: 0 0 10px var(--clr-dark-theme-200);
+  box-shadow: 0 0 10px var(--clr-dark-theme-200); 
+  transition: background-color 0.5s;
 }
 
 html.dark-mode .pricing-card:last-of-type {
