--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,14 @@
     }
   }
 
+  .approach-fees-heading-span {
+    display: inline-block;
+    text-decoration: underline;
+    text-decoration-style: wavy;
+    text-decoration-thickness: .15rem;
+    text-decoration-color: var(--clr-blue-100);
+  }
+
   .text-block {
     p {
       font-size: clamp(0.875rem, 2vw, 1rem);
@@ -231,7 +239,7 @@
   .pg1-s3-performance {
     background-color: var(--bg-primary-blue);
     padding-block: var(--padd-60-100);
-    transition: background-color .5s;
+    transition: background-color 0.5s;
   }
 
   .performance-text-block__flex-container {
@@ -416,9 +424,9 @@
     bottom: 0;
     background: #fff;
     opacity: 0;
-    transition: opacity 0.5s ease;
     pointer-events: none;
     z-index: 10;
+    transition: background-color 0.5s, opacity 0.5s ease;
   }
 
   .banner-overlay.active {
@@ -592,7 +600,7 @@
     padding-bottom: clamp(1.9rem, 5vw, 3.125rem);
     clip-path: inset(0px 0px 0px 0px);
     overflow: hidden;
-    transition: background-color .5s;
+    transition: background-color 0.5s;
   }
 
   .footer__svg-page-decoration {
@@ -601,6 +609,7 @@
     top: -1px;
     transform: scaleX(-1) scaleY(-1);
     backface-visibility: hidden;
+    transition: fill 0.5s;
   }
 
   .footer-flex-container {
@@ -675,6 +684,7 @@
   }
 
   .footer-bottom-links-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     font-size: var(--fs-card-text);
@@ -700,6 +710,28 @@
       width: 100%;
       margin-bottom: 1.5rem;
       opacity: 0.6;
+    }
+  }
+
+  .created-by-svg {
+    margin-inline: auto;
+    width: 250px;
+    height: auto;
+    text-shadow: 2px 2px 2px var(--clr-blue-150);
+    margin-bottom: 1rem;
+
+    @media (width > 800px) {
+      position: absolute;
+      top: 55px;
+      left: -3%;
+      transform: rotate(-10deg);
+      transition: transform 0.75s ease-out;
+      user-select: none;
+
+      &:hover {
+        transform: scale(1.4);
+        transition: transform 0.75s ease-out;
+      }
     }
   }
 }
